--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.iOS/Info.plist
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.iOS/Info.plist
@@ -36,5 +36,13 @@
     <string>1.0</string>
     <key>CFBundleShortVersionString</key>
     <string>1</string>
+    <key>NSBluetoothPeripheralUsageDescription</key>
+    <string>Say something useful here that your users will understand</string>
+    <key>NSBluetoothAlwaysUsageDescription</key>
+    <string>Say something useful here that your users will understand</string>
+    <key>UIBackgroundModes</key>
+    <array>
+      <string>bluetooth-central</string>
+    </array>
   </dict>
 </plist>
