--- a/XamarinHello/.editorconfig
+++ b/XamarinHello/.editorconfig
@@ -290,6 +290,8 @@ dotnet_diagnostic.IDE1006.severity = error
 dotnet_diagnostic.IDE0008.severity = none
 # IDE0010: Add missing cases
 dotnet_diagnostic.IDE0010.severity = none
+# IDE0011: Add braces
+csharp_prefer_braces = when_multiline
 # IDE0025: Use expression body for properties
 csharp_style_expression_bodied_properties = true
 # IDE0026: Use expression body for indexers
