--- a/XamarinHello/.editorconfig
+++ b/XamarinHello/.editorconfig
@@ -334,7 +334,7 @@ dotnet_diagnostic.SA1118.severity = warning
 dotnet_diagnostic.SA1137.severity = error
 # SA1124: Do not use regions
 dotnet_diagnostic.SA1124.severity = error
-# SA1200: UsingDirectivesMustBePlacedWithinNamespace
+# SA1200: Using Directives Must Be Placed Within Namespace
 dotnet_diagnostic.SA1200.severity = none
 # SA1201: Elements should appear in the correct order
 dotnet_diagnostic.SA1201.severity = error
