--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/XamarinHelloBle.Client.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/XamarinHelloBle.Client.csproj
@@ -17,8 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="5.1.0" />
+    <PackageReference Include="Shiny" Version="2.4.3.3003" />
     <PackageReference Include="Shiny.BluetoothLE" Version="2.4.3.3003" />
-    <PackageReference Include="Shiny.Core" Version="2.4.3.3003" />
     <PackageReference Include="Shiny.Notifications" Version="2.4.3.3003" />
     <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.406">
       <PrivateAssets>all</PrivateAssets>
@@ -49,5 +49,4 @@
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
-
 </Project>
