The deeper down the Shiny hole, the stranger the errors get

--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Android/XamarinHelloBle.Android.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Android/XamarinHelloBle.Android.csproj
@@ -12,7 +12,7 @@
     <RootNamespace>XamarinHelloBle.Droid</RootNamespace>
     <AssemblyName>XamarinHelloBle.Android</AssemblyName>
     <FileAlignment>512</FileAlignment>
-    <TargetFrameworkVersion>v10.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v11.0</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidUseIntermediateDesignerFile>true</AndroidUseIntermediateDesignerFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
@@ -55,6 +55,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
+    <Reference Include="Mono.Android.Export" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
