--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Linux/XamarinHelloBle.Linux.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Linux/XamarinHelloBle.Linux.csproj
@@ -5,4 +5,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\..\output\linux\</OutputPath>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <OutputPath>..\..\output\linux\</OutputPath>
+  </PropertyGroup>
+
 </Project>
