--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Android/XamarinHelloBle.Android.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Android/XamarinHelloBle.Android.csproj
@@ -39,6 +39,7 @@
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
     <AndroidDexTool>d8</AndroidDexTool>
     <AndroidUseAapt2>true</AndroidUseAapt2>
+    <AndroidEnableMultiDex>false</AndroidEnableMultiDex>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
