--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/XamarinHelloBle.Client.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/XamarinHelloBle.Client.csproj
@@ -33,8 +33,8 @@
     <Compile Update="Views\ScannerView.xaml.cs">
       <DependentUpon>ScannerView.xaml</DependentUpon>
     </Compile>
-    <Compile Update="Views\MainView.xaml.cs">
-      <DependentUpon>MainView.xaml</DependentUpon>
+    <Compile Update="Views\MainTabbedView.xaml.cs">
+      <DependentUpon>MainTabbedView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
 
@@ -45,7 +45,7 @@
     <EmbeddedResource Update="Views\ScannerView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
-    <EmbeddedResource Update="Views\MainView.xaml">
+    <EmbeddedResource Update="Views\MainTabbedView.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
   </ItemGroup>
