--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Android/XamarinHelloBle.Android.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Android/XamarinHelloBle.Android.csproj
@@ -72,6 +72,12 @@
     <PackageReference Include="Shiny.BluetoothLE">
       <Version>2.4.3.3003</Version>
     </PackageReference>
+    <PackageReference Include="Shiny.Core">
+      <Version>2.4.3.3003</Version>
+    </PackageReference>
+    <PackageReference Include="Shiny.Jobs">
+      <Version>2.4.3.3003</Version>
+    </PackageReference>
     <PackageReference Include="StyleCop.Analyzers.Unstable">
       <Version>1.2.0.406</Version>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
