--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/XamarinHelloBle.Client.csproj
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/XamarinHelloBle.Client.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="DryIoc.Microsoft.DependencyInjection" Version="5.1.0" />
     <PackageReference Include="Shiny" Version="2.4.3.3003" />
     <PackageReference Include="Shiny.BluetoothLE" Version="2.4.3.3003" />
+    <PackageReference Include="Shiny.BluetoothLE.Hosting" Version="2.4.3.3003" />
     <PackageReference Include="Shiny.Core" Version="2.4.3.3003" />
     <PackageReference Include="Shiny.Jobs" Version="2.4.3.3003" />
     <PackageReference Include="Shiny.Notifications" Version="2.4.3.3003" />
