splitting out auto-gen from Tmds.DBus

--- a/Linux.DBus/LinuxDBus.Client/LinuxDbus.Bluetooth.csproj
+++ b/Linux.DBus/LinuxDBus.Client/LinuxDbus.Bluetooth.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="StyleCop.Analyzers.Unstable" Version="1.2.0.406">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Tmds.DBus" Version="0.10.1" />
   </ItemGroup>
 
