--- a/Xamarin.Shiny/XamarinBle.Android/XamarinBle.Android.csproj
+++ b/Xamarin.Shiny/XamarinBle.Android/XamarinBle.Android.csproj
@@ -135,7 +135,7 @@
     <AndroidResource Include="Resources\values\strings.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\XamarinHelloBle.Client\XamarinHelloBle.Client.csproj">
+    <ProjectReference Include="..\XamarinBle.Client\XamarinBle.Client.csproj">
       <Project>{b4695392-249b-49b8-a637-2b6967f4f8ea}</Project>
       <Name>XamarinHelloBle.Client</Name>
     </ProjectReference>
