--- a/Xamarin.Shiny/XamarinBle.UWP.Background/XamarinBle.UWP.Background.csproj
+++ b/Xamarin.Shiny/XamarinBle.UWP.Background/XamarinBle.UWP.Background.csproj
@@ -139,7 +139,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\XamarinHelloBle.Client\XamarinHelloBle.Client.csproj">
+    <ProjectReference Include="..\XamarinBle.Client\XamarinBle.Client.csproj">
       <Project>{b4695392-249b-49b8-a637-2b6967f4f8ea}</Project>
       <Name>XamarinHelloBle.Client</Name>
     </ProjectReference>
