--- a/Xamarin.Shiny/XamarinBle.UWP/XamarinBle.UWP.csproj
+++ b/Xamarin.Shiny/XamarinBle.UWP/XamarinBle.UWP.csproj
@@ -134,7 +134,7 @@
     <None Include="XamarinHelloBle.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\XamarinHelloBle.Client\XamarinHelloBle.Client.csproj">
+    <ProjectReference Include="..\XamarinBle.Client\XamarinBle.Client.csproj">
       <Project>{b4695392-249b-49b8-a637-2b6967f4f8ea}</Project>
       <Name>XamarinHelloBle.Client</Name>
     </ProjectReference>
