--- a/ESP32/EspBleServer/platformio.ini
+++ b/ESP32/EspBleServer/platformio.ini
@@ -11,5 +11,6 @@
 [env:esp32-c3-devkitm-1]
 platform = espressif32
 board = esp32-c3-devkitm-1
+board_build.flash_mode = dio
 framework = espidf
 monitor_speed = 115200
